# hunterclassic-lib

./: .gitignore  README.md  ejemplo_uso.py  pyproject.toml  requirements.txt  reserves.json  species.json  weapons.json
hunterclassic/engine/: coverage.py  loadout.py
hunterclassic/models/: __init__.py  ammo.py  animal.py  loadout.py  mission.py  reserve.py  weapon.py
hunterclassic/static_data/: EXTENDING.md  __init__.py  cache.py  loader.py  mission_repository_example.py  repositories.py  repository.py  static_data.py  static_files.py  validator.py
