[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hunterclassic"
version = "0.1.0"
description = "Python library for TheHunter Classic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
include = ["hunterclassic*"]